# intelligent-databse-prototype

./: .pre-commit-config.yaml  pyproject.toml  pyproject.toml.bak
.github/workflows/: ci.yml
